--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^9.1.0",
+    "cors": "^2.8.5",
     "mongodb": "^3.6.6"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
-    "nodemo": "^1.0.0"
+    
+    "nodemon": "^1.0.0"
   }
 }
